# robot_network_first_steps_2

./: README.md  log.html  output.xml  pyproject.toml  report.html
Keywords/: check_invoice.robot  example-settings.robot  log.html  output.xml  print_profile.robot  report.html
Page_Navigation_and_Variables/: cons_log_with_variables.robot  page_navigation.robot
Page_Should_Contain/: Test_Invoice_Manager.robot
