[tool.poetry]
name = "intro-robot-framework"
version = "0.1.0"
description = "first steps with poetry, introduction robot framework"
authors = ["Dmitri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
