[tool.poetry]
name = "intro-robot-framework"
version = "0.1.0"
description = "first steps with poetry, introduction robot framework"
authors = ["Dmitri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
robotframework = "^7.1"
robotframework-seleniumlibrary = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
